0.3.0:
  - New single-Logger logging system.

0.2.1:
  - Support for Savon 0.9.1 and later which is now a dependency.
  - Upgraded to httpi/0.9.2, httpclient/2.1.6.
  - use_ruby_names now defaults to true.

0.2.0:
  - Now using httpi instead of net/http.

0.1.0:
  - Full soap4r code generation for client libraries.
  - Experimental savon code generation for client libraries (in development).
  - Full ClientLogin authentication support.
  - Minimal documentation generation support.
  - The very beginnings of a testing framework.